# splicetarget

./: .gitignore  Dockerfile  Makefile  README.md  env.yml  pyproject.toml  setup.py
configs/: pipeline.yaml
notebooks/: 00_quickstart.ipynb  02_real_data_walkthrough.ipynb
splicetarget/: __init__.py  cli.py
splicetarget/alignment/: __init__.py  aligner.py
splicetarget/data/: __init__.py  io.py  reference.py
splicetarget/isoforms/: __init__.py  classify.py  collapse.py  quantify.py
splicetarget/splicing/: __init__.py  events.py
splicetarget/therapeutic/: __init__.py  aso_design.py  offtarget.py  scoring.py
splicetarget/utils/: __init__.py  genome.py
splicetarget/visualization/: __init__.py  sashimi.py
tests/: __init__.py  conftest.py  test_isoforms.py  test_splicing.py  test_therapeutic.py  test_utils.py
